--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,13 @@ repositories {
 sourceCompatibility = 1.6
 
 dependencies {
-	compile 'wellsb1:forty11-j:0.0.1'
+    if (gradle.ext.addFortJProjectToClasspath) {
+    	compile findProject(":fort_j")
+    }
+    else {
+    	compile "wellsb1:forty11-j:0.0.1"
+    }
+	
 	compile group: 'log4j', name: 'log4j', version: '1.2.16'
 	compile group: 'commons-logging', name: 'commons-logging', version: '1.2'
 }
@@ -27,35 +33,3 @@ dependencies {
 jar {
     baseName 'forty11-l'
 }
-
-/************************************************************
- * Ensuring source directories are created if they do not 
- * already exist when running 'gradle eclipse'
- * Also sets Java 6 as the default target within Eclipse
- */
-eclipse {
-	classpath {
-		file {
-			tasks.eclipse.dependsOn(cleanEclipseClasspath)
-			tasks.eclipse.dependsOn("create-dirs")
-		}
-	}
-}
-
-
-
-/************************************************************
- * This task should be used when creating a new project as
- * it will create all source and resource directories.  This
- * task is automatically executed during the 
- * 'gradle eclipse' command.
- */
-task "create-dirs" {
-	doLast {
-	   sourceSets*.java.srcDirs*.each { it.mkdirs() }
-	   sourceSets*.resources.srcDirs*.each { it.mkdirs() }
-   }
-}
-
-
-
