forty11-j is now available on s3

--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,10 @@ group = 'wellsb1'
 repositories { 
    mavenLocal()
    mavenCentral() 
+   
+   maven {
+        url "http://files.liftck.com/gradle/repository"
+    }
 }
 
 
