added a commented out plugin to allow for easy access to the 'closeAndReleaseRepository' task

--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,10 @@
+/*
+plugins {
+	// Releasing to Maven Central from Gradle without dealing with Nexus UI by using 'gradle closeAndReleaseRepository'
+    id 'io.codearte.nexus-staging' version '0.11.0'
+}
+*/
+
 apply plugin: 'eclipse'
 apply plugin: 'java'
 apply plugin: 'maven'
